[project]
name = "endorlabs"
dynamic = ["version"]
description = "Type-safe Python SDK for the Endor Labs REST API — resource facades, operational workflows, and optional agent-context bootstrap"
authors = [
    { name = "Tim Gowan", email = "tgowan@endor.ai" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "endor",
    "endorlabs",
    "security",
    "sdk",
    "api-client",
    "supply-chain",
    "vulnerability",
    "sast",
    "sca",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "httpx==0.28.1",
    "tenacity==9.1.4",
    "zstandard==0.25.0",
    "defusedxml==0.7.1",
]

[project.optional-dependencies]
# User-docs sync (include_user_docs=True in init/endor-context)
docs = [
    "beautifulsoup4==4.15.0",
    "markdownify==1.2.2",
]
# DataFrame/Parquet export (estate cardinality tabular) + estate graph metrics (igraph/leidenalg)
analytics = [
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "igraph==1.0.0",
    "leidenalg==0.12.0",
]

[project.scripts]
# Bootstrap / agent context
endor-context = "endorlabs.context.cli:main"
endor-agent-context = "endorlabs.workflows.agent_context.cli:cli_main"
# Estate analytics
endor-estate = "endorlabs.workflows.estate.cli.main:main"
# Security and analysis workflows
endor-callgraph-search = "endorlabs.workflows.callgraph.search:main"
endor-reachability-context = "endorlabs.workflows.reachability.cli:main"
endor-semgrep-inventory = "endorlabs.workflows.semgrep.inventory:main"

[project.urls]
Homepage = "https://github.com/endorlabs/endorlabs-sdk"
Repository = "https://github.com/endorlabs/endorlabs-sdk"
Documentation = "https://docs.endorlabs.com/"  # Endor Labs platform docs; SDK docs in repo README
Changelog = "https://github.com/endorlabs/endorlabs-sdk/blob/main/docs/changelog.md"
Issues = "https://github.com/endorlabs/endorlabs-sdk/issues"

[dependency-groups]
dev = [
    "jsonschema==4.26.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.16",
    "pyright==1.1.410",
    "pre-commit==4.6.0",
    "rich==15.0.0",
    # Docs-sync deps for unit tests (mirrors [project.optional-dependencies.docs])
    "beautifulsoup4==4.15.0",
    "markdownify==1.2.2",
    # Analytics deps for unit tests (mirrors [project.optional-dependencies.analytics])
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "igraph==1.0.0",
    "leidenalg==0.12.0",
    "datamodel-code-generator==0.61.0",
    "hatch==1.17.0",
    "twine==6.2.0",
]

[build-system]
requires = ["hatchling==1.30.1", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Release wheels from vX.Y.Z tags should not carry +g<hash> local segments.
local_scheme = "no-local-version"
# Prefer .dev0 anchors over experimental tags (dev-build, dev19, etc.) still in remote history.
# Dev trees: anchor on vX.Y.Z.dev0 only (excludes v0.1.1.dev19, v0.1.1.dev-build.*, etc.).
# Release builds: set SETUPTOOLS_SCM_PRETEND_VERSION from the vX.Y.Z tag in CI (see release workflow).
git_describe_command = [
    "git",
    "describe",
    "--dirty",
    "--tags",
    "--long",
    "--match",
    "v[0-9]*.[0-9]*.[0-9].dev0",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/endorlabs/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/endorlabs"]
artifacts = ["src/endorlabs/py.typed"]  # PEP 561 marker for typed package

# Maintainer publish target only (explicit index; not used for default uv sync).
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-W default",
]
markers = [
    "integration: marks tests as integration tests",
    "writes: marks tests that perform create/update/delete (write operations) against the API",
    "long: marks long-running integration tests (excluded in CI; run locally with pytest -m long)",
    "interactive: marks browser OAuth / manual token capture (excluded in CI; run locally with pytest -m interactive)",
]

[tool.coverage.report]
fail_under = 70
omit = [
    "src/endorlabs/auth_server.py",  # Browser-interactive; cannot be meaningfully covered in CI
    "src/endorlabs/generated/*",  # OpenAPI-generated artifacts; validated via contract quality gates
    "src/endorlabs/workflows/estate/collect/benchmark.py",  # Local collect-strategy spike; not shipped workflow
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.codespell]
skip = ".git,.venv,*.lock,*.json,.endorlabs-context,src/endorlabs/generated"
ignore-words-list = "endor,endorlabs"

[tool.ruff]
line-length = 88
target-version = "py313"
# Note: exclude patterns should match [tool.pyright] exclude for consistency
exclude = [
    ".git",
    ".venv",
    ".venv.bak",
    "venv",
    "env",
    "ENV",
    "env.bak",
    "venv.bak",
    ".vscode",
    ".idea",
    ".pytest_cache",
    ".tox",
    ".nox",
    ".ruff_cache",
    "src/endorlabs/generated",
    "src/endorlabs/generated/**",
    "src/endorlabs/generated/models",
    "src/endorlabs/generated/models/**",
    "devtools",
    "devtools/**",
    "src/endorlabs/agent_knowledge/skills",
    "src/endorlabs/agent_knowledge/skills/**",
    ".github/scripts",
    ".github/scripts/**",
    "*.log",
    "*.md",
    "__pycache__",
    "**/__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "build",
    "dist",
    "*.egg-info",
    "**/*.egg-info",
    ".coverage",
    "**/.coverage",
    "coverage.xml",
    "**/coverage.xml",
    ".hypothesis",
    "**/.hypothesis",
    ".DS_Store",
    "Thumbs.db",
    ".tmp",
    ".tmp/**",
]

[tool.ruff.lint]
# Enable comprehensive linting
select = [
    # --- Core Python quality ---
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (includes F811 for duplicate definitions)
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C90",   # mccabe complexity
    "RUF",   # Ruff-specific rules
    "ANN",   # flake8-annotations
    "D",     # pydocstyle
    "PERF",  # perflint
    "SIM",   # flake8-simplify: Simplifies code (better readability for open source)
    # --- Access & argument hygiene ---
    "SLF",   # flake8-self: Prevents accessing private members (_api_key) from outside
    "TCH",   # flake8-type-checking: Moves circular imports to TYPE_CHECKING blocks
    "ARG",   # flake8-unused-arguments: Finds unused arguments (critical for API signatures)
    "PT",    # flake8-pytest-style: Enforces standard testing patterns
    # --- Security & agent guardrails (2026) ---
    "S",     # flake8-bandit: security (hardcoded secrets, exec, eval, unsafe deser)
    "T20",   # flake8-print: no print() in library code
    "ERA",   # eradicate: detect commented-out code
    "TRY",   # tryceratops: exception handling structure
    "RET",   # flake8-return: clean return patterns
    "RSE",   # flake8-raise: raise patterns
    "A",     # flake8-builtins: no builtin shadowing
    "DTZ",   # flake8-datetimez: timezone-aware datetime
    # --- Pylint subset (conventions, errors, warnings — not refactoring) ---
    "PLC",   # pylint conventions
    "PLE",   # pylint errors
    "PLW",   # pylint warnings
    # --- Modern Python idioms ---
    "FURB",  # refurb: modern Python idioms
    "FLY",   # flynt: prefer f-strings
    "PIE",   # flake8-pie: misc cleanness
]

# Ignore rules that conflict with SDK patterns
ignore = [
    # UP007 removed: Ruff now forces Optional[str] -> str | None (py313)
    "D107",    # Missing docstring in __init__ (covered by class docstring)
    "TC003",   # Iterator used in return type; keep at runtime for clarity
    "ANN401",  # Any acceptable for validators, **kwargs, and API payloads
    # --- Security: intentional SDK patterns ---
    "S101",    # assert used as invariant checks in api_client/client_surface
    "S113",    # httpx timeout false positive (client-level timeout set at init)
    # --- Import patterns: SDK uses lazy/deferred imports to avoid circular deps ---
    "PLC0415", # Non-top-level imports: intentional for circular dependency avoidance
    # --- Class/method stubs ---
    "PIE790",  # Unnecessary pass: kept in abstract/stub classes for explicitness
    # --- Exception handling ---
    "TRY003",  # Long exception messages are intentional in SDK error reporting
    "TRY300",  # else-block suggestion: stylistic, not a correctness issue
    "TRY301",  # Abstract raise to inner function: intentional exception patterns
    "TRY400",  # logging.exception vs logging.error: cleanup TODO
    # --- Return patterns ---
    "RET504",  # Assignment-before-return kept for readability and debugging
    "RET505",  # Unnecessary else after return: kept for readability
]

[tool.ruff.lint.isort]
# Forces strict separation of standard lib, 3rd party, and local imports
known-first-party = ["endorlabs"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Resolves D203/D213 conflicts automatically

[tool.ruff.lint.mccabe]
max-complexity = 12  # Default 10; 12 gives SDK methods some room

[tool.ruff.lint.pylint]
max-args = 10       # SDK methods can have many kwargs; 10 is generous
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["type", "id", "hash", "filter", "list"]  # API field names

# Per-file ignores — grouped by reason
[tool.ruff.lint.per-file-ignores]
# --- Transport layer ---
"src/endorlabs/api_client.py" = ["C901", "S105"]  # complex _handle_response; "browser" sentinel comparison
# --- Client surface ---
"src/endorlabs/client_surface.py" = []
# --- Auth: global token capture is intentional ---
"src/endorlabs/auth_server.py" = ["PLW0603"]
# --- Context: lazy module loading ---
"src/endorlabs/context/__init__.py" = ["PLW0603"]
# --- Resource model quirks ---
"src/endorlabs/resources/project.py" = ["F811"]  # TenantMeta duplicate
# --- Internal/API compatibility: private helpers and unused params ---
"src/endorlabs/resources/base.py" = ["SLF001"]
"src/endorlabs/operations/__init__.py" = ["SLF001"]
"src/endorlabs/resources/audit_log.py" = ["SLF001"]
"src/endorlabs/resources/dependency_metadata.py" = ["ARG001"]
"src/endorlabs/resources/finding.py" = ["F811", "S105"]  # TenantMeta duplicate; INVALID_SECRET/VALID_SECRET enum
"src/endorlabs/resources/package_license.py" = ["ARG001"]
# --- Utils: intentional patterns ---
"devtools/refresh_token_to_dotenv.py" = ["T201", "D103", "S105"]  # CLI; env var name strings
"devtools/run_without_endor_token.py" = ["D103", "S603"]  # maintainer env wrapper
"main.py" = ["T201"]  # repo-root SDK walkthrough; intentional print() for learners
# --- Workflows: library contracts strict; CLI stdout intentional ---
# Console scripts and argparse mains write paths/JSON to stdout (not library code).
"src/endorlabs/workflows/**/cli.py" = ["T201"]
"src/endorlabs/workflows/troubleshooting_scans/*.py" = ["T201"]
"src/endorlabs/workflows/policies/validate.py" = ["T201"]
"src/endorlabs/workflows/semgrep/inventory.py" = ["T201"]
"src/endorlabs/workflows/agent_context/export.py" = ["T201", "C901"]  # CLI main orchestration
"src/endorlabs/workflows/reachability/context.py" = ["C901"]  # build_reachability_context aggregation
# Estate workflows: migrated analytics + relationships; staged docstring/line-length ratchet.
"src/endorlabs/workflows/estate/**" = ["D", "E501", "PERF401", "ARG001", "PLW2901", "SIM117", "C901", "UP047", "T201", "RUF001"]
"src/endorlabs/workflows/estate/analyze/compile_graph/pipeline.py" = ["C901", "D", "E501", "PERF401"]  # phased pipeline orchestration
"src/endorlabs/workflows/estate/export/summarize.py" = ["T201", "D103", "PERF401"]
"src/endorlabs/workflows/estate/analyze/graph_metrics/analytics.py" = ["D103", "E501"]
"src/endorlabs/workflows/estate/analyze/compile_graph/enrich.py" = ["D103", "C901", "PLW2901", "E501"]
"src/endorlabs/workflows/estate/collect/benchmark.py" = ["E501", "D103", "ARG001"]
"src/endorlabs/workflows/troubleshooting_scans/summarize_scan_triage.py" = ["C901"]  # markdown builder
# Skill-maintained CLI scripts (authoring tree; mirrored into agent_knowledge bundle).
"agent-knowledge/skills/**/scripts/*.py" = ["ERA001"]  # section divider comments
"agent-knowledge/skills/endor-custom-sast-rules/scripts/sast_rule_manager.py" = ["C901"]  # cmd_import
"src/endorlabs/agent_knowledge/skills/**/scripts/*.py" = ["ERA001"]  # section divider comments
"src/endorlabs/agent_knowledge/skills/endor-custom-sast-rules/scripts/sast_rule_manager.py" = ["C901"]  # cmd_import
"src/endorlabs/utils/create_payload.py" = ["C901", "UP047"]
"src/endorlabs/utils/polling.py" = ["S311"]  # Non-crypto random for jitter
"src/endorlabs/utils/redaction.py" = ["S105"]  # Variable names contain "token"/"secret" (regex patterns)
# --- Tests: broadly relaxed ---
"tests/**" = ["ANN", "D", "E402", "E501", "SLF001", "ARG001", "ARG002", "S", "T20", "ERA", "TRY", "DTZ", "RET", "A", "PLW", "PT017", "PT018", "RUF100", "SIM117"]
# --- Context CLI: command-line printing is intentional ---
"src/endorlabs/context/cli.py" = ["T20"]
# --- Tools: list sharding; split call-graph/dependency modules live under workflows/ ---
"src/endorlabs/tools/**" = ["C901", "SLF001", "S108"]
"src/endorlabs/workflows/callgraph/**" = ["C901", "SLF001", "S108", "TC001"]
"src/endorlabs/workflows/agent_context/hydration.py" = ["C901"]
"src/endorlabs/workflows/dependencies/metadata_fetch.py" = ["TC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "standard"

# ============================================================================
# Include/Exclude Patterns
# ============================================================================
# Note: exclude patterns should match [tool.ruff] exclude for consistency
include = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    ".venv.bak",
    "venv",
    "env",
    "ENV",
    "env.bak",
    "venv.bak",
    ".vscode",
    ".idea",
    ".pytest_cache",
    "**/.pytest_cache",
    ".tox",
    ".nox",
    ".ruff_cache",
    "**/.ruff_cache",
    "src/endorlabs/generated",
    "src/endorlabs/generated/**",
    "src/endorlabs/generated/models",
    "src/endorlabs/generated/models/**",
    "devtools",
    "devtools/**",
    "src/endorlabs/agent_knowledge/skills",
    "src/endorlabs/agent_knowledge/skills/**",
    ".github/scripts",
    ".github/scripts/**",
    "*.log",
    "*.md",
    "__pycache__",
    "**/__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "build",
    "dist",
    "*.egg-info",
    "**/*.egg-info",
    ".coverage",
    "**/.coverage",
    "coverage.xml",
    "**/coverage.xml",
    ".hypothesis",
    "**/.hypothesis",
    ".DS_Store",
    "Thumbs.db",
    "**/node_modules",  # Pyright-specific
    ".tmp",
    ".tmp/**",
]

# ============================================================================
# Import & Visibility Configuration
# ============================================================================
reportMissingImports = "error"              # Critical for SDK - catch missing imports
reportMissingTypeStubs = "error"             # All deps have stubs; catch new untyped additions
reportUnusedImport = "error"                # Clean up unused imports
reportDuplicateImport = "error"             # Prevent duplicate imports
reportPrivateImportUsage = "error"         # Enforce private API boundary
reportUnsupportedDunderAll = "error"        # __all__ must be valid and names must exist
reportImportCycles = "warning"             # Flag cycles (architectural smell)
reportWildcardImportFromLibrary = "error"  # No from lib import *

# ============================================================================
# Type Completeness (Critical for SDK Public APIs)
# ============================================================================
reportMissingParameterType = "error"        # All public function params must be typed
reportMissingTypeArgument = "error"         # Generic types must have type args
reportUnknownParameterType = "error"        # No untyped parameters
reportUnknownArgumentType = "error"         # No untyped arguments
reportUnknownVariableType = "error"         # No untyped variables
reportUnknownMemberType = "error"           # No untyped class members
reportIncompatibleMethodOverride = "error"  # Catch BaseMeta inheritance issues
reportIncompatibleVariableOverride = "error" # Catch model_config type issues
reportInconsistentConstructor = "error"     # Catch constructor inconsistencies

# ============================================================================
# Generic Types & Type Variables
# ============================================================================
reportInvalidTypeVarUse = "error"           # Catch invalid TypeVar usage (T = TypeVar(...))
reportInvalidStubStatement = "error"        # Catch invalid stub statements
reportUntypedFunctionDecorator = "warning" # Decorators must preserve type (then error when clean)
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "warning"
reportUntypedNamedTuple = "warning"

# ============================================================================
# Pydantic-Specific Considerations
# ============================================================================
# Pydantic models use runtime validation, but we still want type safety
reportCallInDefaultInitializer = "error"    # Catch issues in Field(default=...)
reportUnnecessaryIsInstance = "error"       # Pydantic validators may trigger this
reportUnnecessaryCast = "error"            # Pydantic serialization may trigger this
reportAssignmentType = "error"            # Catch type mismatches in assignments

# ============================================================================
# Type Narrowing (Important for Optional types)
# ============================================================================
reportOptionalMemberAccess = "error"         # Catch None access (Optional[...])
reportOptionalSubscript = "error"           # Catch None subscript (Optional[List[...]])
reportOptionalIterable = "error"            # Catch None iteration
reportOptionalContextManager = "error"      # Catch None context manager
reportOptionalOperand = "error"             # Catch None operations
reportOptionalCall = "error"                # Catch None function calls
reportAssertAlwaysTrue = "error"            # Catch always-true assertions
reportSelfClsParameterName = "error"        # Enforce self/cls naming

# ============================================================================
# Literal Types & TypedDict
# ============================================================================
reportOverlappingOverload = "error"          # Catch overload conflicts
reportUninitializedInstanceVariable = "error" # Catch uninitialized TypedDict fields

# ============================================================================
# Code Quality & Best Practices
# ============================================================================
reportUnusedClass = "error"                  # Catch duplicate class definitions
reportUnusedFunction = "error"               # Catch unused functions
reportUnusedVariable = "error"               # Catch unused variables
reportUnusedCallResult = "error"             # Catch ignored return values
reportUnusedExpression = "error"             # Catch unused expressions
reportUnnecessaryTypeIgnoreComment = "error" # Clean up unnecessary type: ignore
reportMatchNotExhaustive = "error"            # Catch non-exhaustive match statements

# ============================================================================
# Error Handling & Validation
# ============================================================================
reportInvalidStringEscapeSequence = "error" # Catch invalid escape sequences
reportMissingSuperCall = "error"             # Catch missing super() calls

# ============================================================================
# Performance & Optimization
# ============================================================================
reportUnnecessaryComparison = "error"        # Catch unnecessary comparisons
reportUnnecessaryContains = "error"         # Catch unnecessary contains checks

# ============================================================================
# SDK-Specific: Public API Validation
# ============================================================================
reportPrivateUsage = "error"                 # Enforce private (leading _) boundary
reportConstantRedefinition = "error"         # Catch constant redefinitions
reportDeprecated = "error"                   # Catch deprecated API usage
reportIncompleteStub = "warning"             # For future stubs
reportImplicitOverride = "error"             # Require @override on overrides (3.12+; 3.13 enforced)
reportImplicitStringConcatenation = "none"  # Allow multi-line strings (for docstrings)

# Developer-facing surface: strict mode (all strict-only rules apply).
strict = [
  "src/endorlabs/__init__.py",
  "src/endorlabs/client_surface.py",
  "src/endorlabs/facade.py",
  "src/endorlabs/api_client.py",
  "src/endorlabs/core/exceptions.py",
  "src/endorlabs/core/filter.py",
  "src/endorlabs/core/types.py",
]

# Per-root overrides (more specific roots first; first match wins).
# client_surface.pyi supplies the typed Client stub; venvPath omitted for portability.
executionEnvironments = [
    { root = "src/endorlabs/core", pythonVersion = "3.13", reportUnknownVariableType = "warning", reportUnknownArgumentType = "warning", reportUnknownMemberType = "warning" },
    # Estate workflows: staged typing (migrated analytics + relationships modules).
    { root = "src/endorlabs/workflows/estate", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportMissingTypeArgument = "none", reportPrivateUsage = "none", reportUnnecessaryTypeIgnoreComment = "none", reportUnnecessaryIsInstance = "none", reportUnusedCallResult = "none", reportCallIssue = "none", reportArgumentType = "none", reportAttributeAccessIssue = "none" },
    # Call-graph and dependency hydration workflow modules.
    { root = "src/endorlabs/workflows/callgraph", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnnecessaryTypeIgnoreComment = "none", reportUnnecessaryIsInstance = "none", reportPrivateUsage = "none", reportUnusedCallResult = "none", reportArgumentType = "none" },
    { root = "src/endorlabs/workflows/dependencies/bom_graph.py", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnnecessaryTypeIgnoreComment = "none", reportUnnecessaryIsInstance = "none", reportPrivateUsage = "none", reportUnusedCallResult = "none", reportArgumentType = "none" },
    { root = "src/endorlabs/workflows/dependencies/coordinates.py", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnnecessaryTypeIgnoreComment = "none", reportUnnecessaryIsInstance = "none", reportPrivateUsage = "none", reportUnusedCallResult = "none", reportArgumentType = "none" },
    { root = "src/endorlabs/workflows/dependencies/metadata_fetch.py", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnnecessaryTypeIgnoreComment = "none", reportUnnecessaryIsInstance = "none", reportPrivateUsage = "none", reportUnusedCallResult = "none", reportArgumentType = "none" },
    { root = "src/endorlabs/workflows/agent_context/hydration.py", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnnecessaryTypeIgnoreComment = "none", reportUnnecessaryIsInstance = "none", reportPrivateUsage = "none", reportUnusedCallResult = "none", reportArgumentType = "none" },
    # Staged strictness ratchet (phase 2): workflow library unknown-types to warning.
    { root = "src/endorlabs/workflows", pythonVersion = "3.13", reportUnknownVariableType = "warning", reportUnknownArgumentType = "warning", reportUnknownMemberType = "warning", reportCallIssue = "none", reportUnusedCallResult = "none", reportArgumentType = "none", reportAttributeAccessIssue = "none" },
    { root = "src/endorlabs/tools", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnnecessaryTypeIgnoreComment = "none", reportUnnecessaryIsInstance = "none", reportPrivateUsage = "none", reportUnusedCallResult = "none", reportArgumentType = "none" },
    { root = "src/endorlabs/context", pythonVersion = "3.13", reportMissingImports = "none", reportUnknownVariableType = "none" },
    { root = "src/endorlabs/utils", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnnecessaryIsInstance = "none", reportUnusedCallResult = "none" },
    { root = "src/endorlabs/resources", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none" },
    { root = "src/endorlabs/generated/models", pythonVersion = "3.13", reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportCallIssue = "none", reportArgumentType = "none", reportAssignmentType = "none", reportOptionalMemberAccess = "none", reportOptionalSubscript = "none", reportMissingTypeArgument = "none", reportAttributeAccessIssue = "none", reportPrivateUsage = "none", reportUnusedCallResult = "none", reportUnnecessaryTypeIgnoreComment = "none" },
    # Staged strictness ratchet (phase 1): move operations unknown-types to warning.
    { root = "src/endorlabs/operations", pythonVersion = "3.13", reportUnknownVariableType = "warning", reportUnknownArgumentType = "warning", reportUnknownMemberType = "warning" },
    { root = "tests", pythonVersion = "3.13", extraPaths = ["src", ".", "devtools", ".github/scripts"], reportUnknownVariableType = "none", reportUnknownArgumentType = "none", reportUnknownMemberType = "none", reportUnknownParameterType = "none", reportCallIssue = "none", reportUninitializedInstanceVariable = "none", reportAttributeAccessIssue = "none", reportMissingParameterType = "none", reportUnusedCallResult = "none", reportReturnType = "none", reportArgumentType = "none", reportAssignmentType = "none", reportOptionalMemberAccess = "none", reportOptionalSubscript = "none", reportPrivateUsage = "none", reportOperatorIssue = "none", reportMissingTypeArgument = "none" },
    { root = "src", pythonVersion = "3.13" },
]
